--- a/mobile/android/base/strings.xml.in
+++ b/mobile/android/base/strings.xml.in
@@ -688,5 +688,6 @@
   <string name="ceno_notification_description">&ceno_notification_description;</string>
   <string name="ceno_notification_home_description">&ceno_notification_home_description;</string>
   <string name="ceno_notification_purge_description">&ceno_notification_purge_description;</string>
+  <string name="ceno_notification_purge_do_description">&ceno_notification_purge_do_description;</string>
   <string name="ceno_notification_channel_name">&ceno_notification_channel_name;</string>
 </resources>
